v4.1.0
- new argument "position" to export2md function, to place tables justified to the left, centerd or to the right (only when compiling to HTML or PDF)
- bug fixed when variable names contains spaces.
- "..." argument removed from export2word.
- no longer Hmisc, xtable, gdata package dependies. Imports write_xlsx from writexl and suggests readxl packages.
- xlsx removed from suggested packages.
- export2xls uses write_xlsx function from writexl pacakge.
- cGroupsWUI improved and updated.
- shinythemes package suggested. This saves a lot of space in app folder.
- shinyWidgets package suggested (for awasome dropdownbuttons and colour picker in the shiny app)
- export2md, export2mdcbind: bug fixed when drawing header line and no Nmax is reported.
- labelled class from "predimed", "regicor" variables removed.
- byrow add a choice to compute proportions by combinations of rows and columns (i.e. to sum up 100%).
v4.0.0
- new argument var.equal to compareGroups and descrTable.
- update.compareGroups: changed.
- dates variables supported
- compareGroups.default and compareGroups.formula unified in a single compareGroups function.
- new strataTable function: to create stratified tables without having to use cbind. Also incorporates an update method.
- package vignette improved.
- new descrTable created. This function builds a descriptive table in one step.
- Imports: kableExtra and chron added,  
- Suggested: car removed
- export2md: new arguments added (format, width, strip, first.strip, background, size and landscape)
- compareGroups: new arguments added (chisq.test.B and chisq.test.seed)
- table.i, createTable: checking OS to print +/- sign removed from table.i and passed to createTable. This speeds up the bivariate construction a lot.
- compareGroups.default: '...' argument removed.
v3.4.0
-. compareGroups now handles tibble objects
v3.3.4
-. bug fixed when checking vignette
v3.3.3
-. bug fixed for Hmisc::label in examples and vignette
v3.3.2