@@ -2,11 +2,11 @@ Package: compareGroups
 Type: Package
 Title: Descriptive Analysis by Groups
 Version: 4.1.0
-Date: 2018-11-21
-Depends:
+Date: 2019-02-18
+Depends: 
     R (>= 2.13.1),
     SNPassoc
-Imports:
+Imports: 
     survival,
     epitools,
     tools,
@@ -18,7 +18,7 @@ Imports:
     chron,
     stats,
     writexl
-Suggests:
+Suggests: 
     tcltk2,
     shiny,
     shinyBS,
