@@ -23,7 +23,7 @@ Summarize genetic data (Single Nucleotide Polymorphisms) data displaying Allele 
 Package: \tab compareGroups\cr
 Type: \tab Package\cr
 Version: \tab 4.1.0\cr
-Date: \tab 2018-11-21\cr
+Date: \tab 2019-02-18\cr
 License: \tab GPL version 2 or newer\cr
 LazyLoad: \tab yes\cr
 }
